@@ -36,6 +36,7 @@ typedef enum
     SCOREP_INSTRUMENTER_ADAPTER_COBI,
     SCOREP_INSTRUMENTER_ADAPTER_COMPILER,
     SCOREP_INSTRUMENTER_ADAPTER_CUDA,
+    SCOREP_INSTRUMENTER_ADAPTER_ONLINE_ACCESS,
     SCOREP_INSTRUMENTER_ADAPTER_OPARI,
     SCOREP_INSTRUMENTER_ADAPTER_PDT,
     SCOREP_INSTRUMENTER_ADAPTER_PREPROCESS,
